feat: use java21 declarations